# agent-sandbox

./: .env.example  .gitignore  ACCEPTABLE_USE.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_HANDOFF.md  Dockerfile  GEMINI.md  MARKETING-PLAN.md  Makefile  PRIVACY.md  PROMOTION-COMMAND-CENTER.md  README.md  SECURITY.md  agent-sandbox-brief.md  agent-sandbox-handoff.md  agent-sandbox-log.md  docker-compose.yml  llms.txt  openapi.json  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.well-known/: agent-manifest.json
alembic/: env.py
alembic/versions/: 0001_init.py  0002_rate_limit_buckets.py  0003_agent_credential_version.py  0004_verification_core.py
app/: __init__.py  main.py
app/core/: config.py  discovery.py  logging.py  middleware.py  runtime.py
app/db/: session.py
app/models/: __init__.py  agent.py  event_log.py  message.py  (+3 more)
docs/: DEPLOY_RENDER.md  INTEROP_SPEC.md  LOAD_TESTING.md  VERIFICATION_PIVOT_DESIGN.md
examples/: quickstart.js  quickstart.py
scripts/: autonomous_agent.py  bootstrap_conformance_agent.py  dump_discovery.py  loadtest.py  purge_old_events.py  simulate_agents.py  start.sh  test_agent.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agent_sandbox_client/: __init__.py
site/: config.js  index.html
tests/: conftest.py  test_abuse_control.py  test_auth.py  test_config.py  test_discovery.py  test_events_retention.py  test_messages.py  test_ping.py  test_public_endpoints.py  test_rate_limit.py  test_registration.py  test_time.py  test_transactions.py  test_web_hardening.py
(+50 files in other folders)
