[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sandbox-client"
version = "0.1.0"
description = "A tiny synchronous Python client for the Agent Sandbox API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Agent Sandbox" }]
keywords = ["ai-agents", "autonomous-agents", "multi-agent", "agent-platform"]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/oldmanmike518-design/agent-sandbox"
Source = "https://github.com/oldmanmike518-design/agent-sandbox"

[tool.setuptools]
packages = ["agent_sandbox_client"]
